# risky

./: .clangd  Cargo.toml  Makefile.toml  justfile  linker.ld  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.zed/: settings.json  tasks.json
src/: _my_heap.rs  arch.rs  boot.rs  csr.rs  demo.rs  drivers.rs  fdt.rs  heap.rs  interrupt.rs  lib.rs  logger.rs  macros.rs  main.rs  memory.rs  mmio.rs  platform.rs  plic.rs  sbi.rs  soc.rs  spin.rs  task.rs  timer.rs  uart.rs
src/drivers/: uart.rs
src/interrupt/: rv32.S  rv64.S
src/memory/: heap.rs  pmm.rs
src/platform/: plic.rs  sbi.rs  timer.rs
src/spin/: lazy.rs  mutex.rs  once.rs
src/task/: context.rs  scheduler.rs
src/task/context/: rv32.S  rv64.S
